Improving the copywriting of the web

--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
       </div>
       </article>
       <aside class="social-links">
-        Entre Abril de 2015 y Julio de 2024 Mósica fue una web donde se publicaban los conciertos que se celebraron en Zaragoza.
+        Entre Abril de 2015 y Julio de 2024 Mósica fue una web donde se publicaban los conciertos que se celebraron en Zaragoza. 
         <br><br>
-        Nos vemos en los bares 🍻
+        En los últimos años este proyecto quedó en modo mantenimiento, y dado que próximamente esta situación no iba a cambiar, hemos preferido descontinuar el proyecto.
+        <br><br>
+        Nos vemos en las salas de conciertos 🍻.
       </aside>
     </main>
     <footer class="site-footer" role="contentinfo">
       <p class="copyright"><a href="http://mosica.es">Mosica.es</a> fue un proyecto de <a href="https://danilat.com" target="blank">Dani Latorre</a> y <a href="https://guillermolatorre.com" target="blank">Guillermo Latorre</a>.</p>
-      <p>Si te además de la música en directo te gusta el boxeo visita <a href="http://entalto.com">Entalto Boxing</a></p>
     </footer>
   </div>
 </body>
