--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:description" content="Conciertos en Zaragoza">
   <meta property="og:url" content="http://mosica.es/">
   <meta property="og:site_name" content="Mosica.es">
-  <meta property="og:image" content="assets/mosica-media.png">
+  <meta property="og:image" content="https://mosica.es/assets/mosica-media.png">
 </head>
 <body>
     <div class="wrapper">
